falta adicionar names para os inputs

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="formulario">
-    <form>
+    <form action="/submete" method="post">
         <div class="form-group">
           <label for="idaviao">ID Avião</label>
           <input class="form-control form-control-sm" id="idAviao">
