--- a/views/index.ejs
+++ b/views/index.ejs
@@ -51,7 +51,7 @@
             <input name="motivo" class="form-control form-control-sm" id="Observ">
         </div>
 
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <button type="submit" class="btn btn-primary">Enviar</button>
       </form>
     </div>
 
@@ -110,9 +110,10 @@
                     </tbody>
                   </table>
     </div>
-    <div>
-      <button class="btn btn-primary" type="submit">Atualiza</button>
+    <div class="atualiza">
+        <button type="button" class="btn btn-secondary" id="btn-atualiza">Atualiza</button>
     </div>
+   
     
     
     
